css/masterefsaestyle.css
/* ... */
@media (max-width: 550px) {
.ftfe-body-header {
    width:60%;
    height:9vw;
    left:0;
    right:0;
    overflow: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: 40px;
    margin-bottom: 40px;
    }
}
.body-header-accent{
    opacity: 1;
    width: 94%;
    position: relative;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    height: 3px;
    background-color: #666;
}
/*
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
*/
/*Body*/
.home {
    position: relative;
    width: 100%;
    display: inline-block;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    padding-left: 2%;
    padding-right: 2%;
    margin-bottom: 2%;
    transition: opacity 500ms;
    visibility: visible;
    opacity: 1;
}
.home:target {
    visibility: visible;
    opacity: 1;
}
.home-grid img{
    -webkit-transition: all 300ms ease-in-out;
    -moz-transition: all 300ms ease-in-out;
    -o-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.home-grid:hover img {
    webkit-transform: scale(0.98);
    -ms-transform: scale(0.98);
    -o-transform: scale(0.98);
    transform: scale(0.98);
}
.center-image {
    width: 100%;
    max-width: 600px!important;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
}
.about {
    position: relative;
    display: inline-block;
    width: 100%;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    padding-left: 1%;
    padding-right: 1%;
    transition: opacity 500ms;
    visibility: visible;
    opacity: 1;
}
.about:target {
    visibility: visible;
    opacity: 1;
}
/*.about img{
    -webkit-transition: all 300ms ease-in-out;
    -moz-transition: all 300ms ease-in-out;
    -o-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.about:hover img {
    webkit-transform: scale(0.98);
    -ms-transform: scale(0.98);
    -o-transform: scale(0.98);
    transform: scale(0.98);
}*/
.about-text {
    text-align: justify;
    color: #ccc;
    width: 100%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    max-width: 600px;
}
.about-text-2 {
    text-align: justify;
    color: #ccc;
    width: 100%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
}
.about-half {
    float: left;
    width: 46%;
    margin-left: 2%;
    margin-right: 2%;
    margin-bottom: 30px;
    min-width: 300px;
    text-align: justify;
}
.equalholder { 
    float:left; 
    clear:left; 
    width:100%; 
    padding:0 0 2em; 
}
.equalheight1 {
    float:left;
}
.equalheight1 p {
    margin:.5em;
    padding:0;
}
@media (max-width: 880px) {
    .about-half {
        width:100%;
        margin-left:0;
        margin-right:0;
    }
    .equalheight1 p {
        margin:0;
        padding-left: 3%;
        padding-right: 3%;
        max-width: 600px;
        left: 0;
        right: 0;
        margin-left: auto;
        margin-right: auto;
    }
}
@media (max-width: 450px) {
    .equalheight1 p {
        padding-right: 15px;
        padding-left: 15px;
    }
}
.body-header-2 {
    text-align: center;
    margin-top: 40px;
    margin-bottom: 40px;
    color: #fff;
    text-decoration: none!important;
    font-family: 'Ubuntu', arial;
    font-weight: 300;
    
}
.body-header-3 {
    text-align: center;
    margin-top: 20px;
    margin-bottom: 10px;
    /*color: rgb(163, 35, 0);*/
    color: #7dc242;
    text-decoration: none!important;
    font-family: 'Ubuntu', arial;
    font-weight: 300;
    
}
@media (max-width: 550px) {
    .body-header-2 {
        margin-top: 30px;
        margin-bottom: 30px;
        font-size: 24px;
    }
    .body-header-3 {
        font-size: 18px;

    }
}
.header-link {
    text-decoration: none!important;
}
.header-link:hover {
    text-decoration: none!important;
    color: rgb(163, 35, 0);
}

.prof-logo{
    text-align: center;
}

.prof-logo img {
    display: inline-block;
}
@media (max-width: 550px) { 
    .prof-logo img {
        height:120px
    }
}

/*
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
*/
/*timeline*/
#timeline {
  max-width: 900px;
  width: 90%;
  height: 350px;
  overflow: hidden;
  margin-left: auto;
  margin-right:auto;
  margin-top:100px;
  margin-bottom:0px;
  position: relative;
}

#dates {
  width: 800px;
  height: 60px;
  overflow: hidden;
}

#dates li {
  list-style: none;
  float: left;
  width: 100px;
  height: 50px;
  font-size: 24px;
  text-align: center;
  background: url('../images/biggerdot.png') center bottom no-repeat;
}

#dates a {
  line-height: 38px;
  padding-bottom: 10px;
  color: #aaa;
  text-decoration: none!important;
}

#dates .selected {
  font-size: 38px;
  color:#eee;
  text-decoration: none!important;
}

#issues {
  width: 800px;
  height: 350px;
  overflow: hidden;
}

#issues li {
  max-width: 800px;
  width:100%;
  height: 250px;
  list-style: none;
  float: left;
}

#issues li.selected img {
  -webkit-transform: scale(1.1, 1.1);
  -moz-transform: scale(1.1, 1.1);
  -o-transform: scale(1.1, 1.1);
  -ms-transform: scale(1.1, 1.1);
  transform: scale(1.1, 1.1);
}
/* ... */

